# Grundlagen_in_CMake

./: README.md
CMake_Example_01/: CMakeLists.txt  main.cpp
